# Dali

./: .floo  .gitignore  .gitmodules  .travis.yml  Arithmetic.md  CMakeLists.txt  CharacterModel.md  Kaparthy Python version.ipynb  LICENSE.md  MANIFEST.in  MShadowCMakeLists.cmake  README.md  README2.md  TODO.txt
cpp/: CMakeLists.txt  CrossEntropy.cpp  CrossEntropy.cpp.template  CrossEntropy.h  Fixing Tokenizer.ipynb  Layers.cpp  Layers.h  Makefile  Makefile.bak  Mat.cpp  Mat.h  Mat.hpp  README.md  SST.cpp  SST.h  Softmax.cpp  Softmax.h  StackedGatedModel.cpp  StackedGatedModel.h  StackedModel.cpp  StackedModel.h  character_prediction.cpp  cnpy.cpp  fix_dylib.sh  gzstream.h  main.cpp  numpy_test.npy  sparkfun_dataset.txt  sparkfun_prediction.cpp  stacked_lstm.cpp  utils.cpp  utils.h  utils.hpp
cpp/cmake/: FindGflags.cmake  FindMKL.cmake
cpp/core/: .gitignore  Backward.cpp  Backward.h  BeamSearch.h  BeamSearch.hpp  CMakeLists.txt  CrossEntropy.cpp.template  CrossEntropy.h  Error.cpp  Error.h  Graph.cpp  Graph.h  Index.cpp  Index.h  Layers.cpp  Layers.h  Mat.cpp  Mat.h  MatOps.cpp  MatOps.h  NlpUtils.cpp  NlpUtils.h  RecurrentEmbeddingModel.cpp  RecurrentEmbeddingModel.h  Reporting.cpp  Reporting.h  SST.cpp  SST.h  SaneCrashes.h  Seq.cpp  Seq.h  SequenceProbability.h  Softmax.cpp  Softmax.h  Solver.cpp  Solver.h  StackedGatedModel.cpp  StackedGatedModel.h  StackedModel.cpp  StackedModel.h  (+15 more)
cpp/dali/: CMakeLists.txt  core.h  test_utils.h  tests.cpp  utils.h
cpp/data/: lattice2.txt
cpp/examples/: CMakeLists.txt  babi_solvers.cpp  bidirectional_sentiment.cpp  bidirectional_sentiment_shortcut.cpp  character_prediction.cpp  grid_search_simple.cpp  language_model.cpp  language_model_from_senti.cpp  lattice.txt  lattice2.txt  lattice_prediction.cpp  lattice_prediction.h  lattice_prediction_from_protobuff.cpp  lattice_prediction_output_test.txt  loading_from_sqlite.cpp  lstm_sentiment.cpp  main.cpp  mini_wiki.txt  mlbasics_learn_to_add.cpp  mlbasics_rnn_binary_addition.cpp  ontology_examples.txt  repl.cpp  sparkfun_prediction.cpp  stacked_lstm.cpp  test_lattice.cpp
cpp/flags/: language_model_30K.flags  language_model_3OK.flags  language_model_easy.flags  sentiment.flags  sentiment2.flags  sentiment_bi.flags  sentiment_conv.flags
cpp/protobuf/: CMakeLists.txt
cpp/scripts/: build_debug.sh  build_fast.sh  enable_completion.sh  fix_dylib.sh  template_instantiator.py  tokenize_split.py
dali/: CMakeLists.txt  config.h.in  core.h  macros.h  runtime_config.cpp  runtime_config.h  test_utils.h  tests.cpp  tests_main.cpp  utils.h
dali/array/: KernelizedSoftmax.h  LazyDot.h  LazySoftmax.h  LazyTensor.h  MshadowIntegerOps.h  TensorAccessor.h  TensorConvolution.h  TensorFunctions.h  TensorOps.h  TensorRandom.h  ThrustAllocator.cu  ThrustAllocator.h  ThrustUtils.h  array.cpp  array.h  array_function.cpp  array_function.h  assignable_array.cpp  assignable_array.h  circular_convolution_tests.cpp  col2im_tests.cpp  concatenate_tests.cpp  debug.cpp  debug.h  dot_tests.cpp  dtype.cpp  dtype.h  functor-impl.h  functor.cpp  functor.h  getmshadow.cu.cpp  getmshadow.h  lazy_op.h  op.cpp  op.h  reducer_kernels.h  shape.cpp  shape.h  slice-impl.h  slice.cpp  (+7 more)
dali/data_processing/: Arithmetic.cpp  Arithmetic.h  Batch.cpp  Batch.h  Glove.cpp  Glove.h  NER.cpp  NER.h  Paraphrase.cpp  Paraphrase.h  SST.cpp  SST.h  babi.cpp  babi.h  babi2.cpp  babi2.h  machine_comprehension.cpp  machine_comprehension.h  tests.cpp
dali/execution/: BeamSearch.h  SequenceProbability.h  Solver.cpp  Solver.h  beam_search-impl.h  beam_search.h  tests.cpp
dali/layers/: GRU.cpp  GRU.h  LSTM.cpp  LSTM.h  Layers.cpp  Layers.h  StackedLSTM.cpp  conv.cpp  conv.h  gru.cpp  gru.h  layers.cpp  layers.h  lstm.cpp  lstm.h  model.h  stacked_lstm.cpp  tests.cpp
dali/mat/: Convolution.cpp  CrossEntropy.cpp.template  GRU.cpp  GRU.h  Index.cpp  Index.h  LSTM.cpp  LSTM.h  Layers.cpp  Layers.h  Mat.cpp  Mat.h  MatOps.cpp  MatOps.h  Seq.cpp  Solver.h  StackedLSTM.cpp  Tape.cpp  Tape.h  Weights.h  __MatMacros__.h  model.cpp  tests.cpp
dali/math/: BlasSwitcher.cpp  BlasSwitcher.h  KernelizedSoftmax.h  LazyDot.h  LazyPluck.h  LazySoftmax.h  LazySoftmaxTranspose.h  LazyTensor.h  MemoryBank.cpp  MemoryBank.h  MshadowEigenDot.h  MshadowIntegerOps.h  SynchronizedMemory.cu.cpp  SynchronizedMemory.h  TensorAccessor.h  TensorConvolution.h  TensorFunctions.h  TensorInternal.cu.cpp  TensorInternal.h  TensorOps.h  TensorRandom.h  ThrustAllocator.cu  ThrustAllocator.cu.cpp  ThrustAllocator.h  ThrustReduceByKey.h  ThrustSoftmax.h  ThrustSoftmaxTranspose.h  ThrustUtils.h  lazy_patch2col.h  lazy_swapaxis.h  tensor_arg_ops.h
dali/models/: QuestionAnswering.h  ReconstructModel.cpp  ReconstructModel.h  RecurrentEmbeddingModel.cpp  RecurrentEmbeddingModel.h  StackedGatedModel.cpp  StackedGatedModel.h  StackedModel.cpp  StackedModel.h  StackedModelState.cpp  StackedModelState.h  shallow_copy.h  tests.cpp
dali/tensor/: Convolution.cpp  CrossEntropy.cpp.template  CrossEntropy.h  Index.cpp  Index.h  Mat.cpp  Mat.h  MatOps.cu.cpp  MatOps.h  Solver.cpp  Solver.cu.cpp  Solver.h  Tape.cpp  Tape.h  Weights.cu.cpp  Weights.h  op.h  solver.cpp  solver.h  tape.cpp  tensor.cpp  tensor.h  tensor_macros.h  tests.cpp  weights.cu.cpp  weights.h
dali/utils/: NlpUtils.cpp  NlpUtils.h  OntologyBranch.cpp  OntologyBranch.h  ParseUtils.cpp  ParseUtils.h  Reporting.cpp  Reporting.h  (+65 more)
examples/: CMakeLists.txt  api_showcase.cpp  arithmetic.cpp  babi_solvers.cpp  beam_training.cpp  beam_tree_training.cpp  bidirectional_sentiment.cpp  character_prediction.cpp  character_prediction.py  grid_search_simple.cpp  language_model.cpp  language_model_from_senti.cpp  lattice_prediction.cpp  lattice_prediction_from_protobuff.cpp  loading_from_sqlite.cpp  lstm_sentiment.cpp  machine_comprehension.cpp  mlbasics_learn_to_add.cpp  mlbasics_learn_to_add.cu  mlbasics_rnn_binary_addition.cpp  mshadow.cu  sparkfun_prediction.cpp  sparse_lstm_predict_sentiment.cpp  sparse_lstm_sentiment.cpp  sparse_ner.cpp  sparse_paraphrase.cpp  templator.cu  templator_cpu.cpp  test_lattice.cpp  visualizer.cpp
(+746 files in other folders)
